Added styles and html content

--- a/html-css-task/index.html
+++ b/html-css-task/index.html
@@ -5,8 +5,145 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+        <header>
+            <div class="container">
+                <a href="#"><img class="logo" src="assets/images/logo.svg" alt="logo"></a>
+                <ul class="menu__list">
+                    <li class="menu__items">Why Spring</li>
+                    <li class="menu__items">Learn</li>
+                    <li class="menu__items">Projects</li>
+                    <li class="menu__items">Training</li>
+                    <li class="menu__items">Support</li>
+                    <li class="menu__items">Community</li>
+                </ul>
+            </div>
+        </header>
+        <main>
+            <div class="container">
+                <div class="description__block">
+                    <h1 class="title">Projects</h1>
+                    <p class="description">From configuration to security, web apps to big data—whatever the infrastructure needs of your application may be, there is a Spring Project to help you build it. Start small and use just what you need—Spring is modular by design.</p>
+                </div>
+            </div>
+            <div class="container">
+                <div class="cards">
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
+                        <h2 class="card__title">Spring Boot</h2>
+                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>  
 </body>
 </html>
