All card images moved to card-images

--- a/html-css-task/index.html
+++ b/html-css-task/index.html
@@ -29,118 +29,31 @@
                     <p class="description">From configuration to security, web apps to big data—whatever the infrastructure needs of your application may be, there is a Spring Project to help you build it. Start small and use just what you need—Spring is modular by design.</p>
                 </div>
             </div>
-            <div class="container">
-                <div class="cards">
+            <div class="cards">
+                <div class="container">
                     <div class="card">
                         <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                        <div class="text">
+                            <h2 class="card__title">Spring Boot</h2>
+                            <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                        </div>
                     </div>
                     <div class="card">
                         <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                        <div class="text">
+                            <h2 class="card__title">Spring Framework</h2>
+                            <p class="card__description">Provides core support for dependency injection, transaction management, web apps, data access, messaging, and more.</p>
+                        </div>
                     </div>
                     <div class="card">
                         <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
+                        <div class="text">
+                            <h2 class="card__title"></h2>
+                            <p class="card__description"></p>
+                        </div>
                     </div>
-                    <div class="card">
-                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
-                    </div>
-                    <div class="card">
-                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
-                    </div>
-                    <div class="card">
-                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
-                    </div>
-                    <div class="card">
-                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
-                    </div>
-                    <div class="card">
-                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
-                    </div>
-                    <div class="card">
-                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
-                    </div>
-                    <div class="card">
-                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
-                    </div>
-                    <div class="card">
-                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
-                    </div>
-                    <div class="card">
-                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
-                    </div>
-                    <div class="card">
-                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
-                    </div>
-                    <div class="card">
-                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
-                    </div>
-                    <div class="card">
-                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
-                    </div>
-                    <div class="card">
-                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
-                    </div>
-                    <div class="card">
-                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
-                    </div>
-                    <div class="card">
-                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
-                    </div>
-                    <div class="card">
-                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
-                    </div>
-                    <div class="card">
-                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
-                    </div>
-                    <div class="card">
-                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
-                    </div>
-                    <div class="card">
-                        <img src="assets/images/spring-boot.svg" alt="spring-boot" class="card__image">
-                        <h2 class="card__title">Spring Boot</h2>
-                        <p class="card__description">Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible</p>
-                    </div>
+                   
+                    
                 </div>
             </div>
         </main>
