Fixed dropdown menu

--- a/html-css-task/index.html
+++ b/html-css-task/index.html
@@ -15,6 +15,7 @@
                     <li class="menu__items">
                         <div class="dropdown">
                             <span class="dropbtn">Why Spring</span>
+                            <div class="nav-arrow"></div>
                             <div class="dropdown-content">
                               <a href="#">Overview</a>
                               <a href="#">Microservices</a>
@@ -30,6 +31,7 @@
                     <li class="menu__items">
                         <div class="dropdown">
                             <span class="dropbtn">Learn</span>
+                            <div class="nav-arrow"></div>
                             <div class="dropdown-content">
                               <a href="#">Overview</a>
                               <a href="#">Quickstart</a>
@@ -41,6 +43,7 @@
                     <li class="menu__items">
                         <div class="dropdown">
                             <span class="dropbtn">Projects</span>
+                            <div class="nav-arrow"></div>
                             <div class="dropdown-content">
                               <a href="#">Overview</a>
                               <a href="#">Spring Boot</a>
@@ -64,6 +67,7 @@
                     <li class="menu__items">
                         <div class="dropdown">
                             <span class="dropbtn">Community</span>
+                            <div class="nav-arrow"></div>
                             <div class="dropdown-content">
                               <a href="#">Overview</a>
                               <a href="#">Events</a>
