Added adaptive for 1000, 900, 800 pixels width

--- a/html-css-task/index.html
+++ b/html-css-task/index.html
@@ -76,6 +76,11 @@
                         </div>
                     </li>
                 </ul>
+                <div class="burger">
+                    <div class="burger__bar"></div>
+                    <div class="burger__bar"></div>
+                    <div class="burger__bar"></div>
+                </div>
             </div>
         </header>
         <main>
