--- a/html-css-task/index.html
+++ b/html-css-task/index.html
@@ -90,7 +90,7 @@
                     <p class="description">From configuration to security, web apps to big data—whatever the infrastructure needs of your application may be, there is a Spring Project to help you build it. Start small and use just what you need—Spring is modular by design.</p>
                 </div>
             </div>
-            <div class="cards">
+            <div class="block">
                 <div class="container">
                     <div class="cards__block">
 
@@ -248,6 +248,73 @@
                                 <p class="card__description">Facilitates the development of contract-first SOAP web services.</p>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="block projects">
+                <div class="container">
+                    <h2 class="title">Projects in the Attic</h2>
+                    <div class="projects__block">
+                        <a href="#" class="project">
+                            <div class="project__text">
+                                <p class="project__title">Spring IO Platform</p>
+                                <p class="project__text">Provides a cohesive, versioned platform for building modern applications. It is a modular, enterprise-grade distribution that delivers a curated set of dependencies.</p>
+                            </div>
+                        </a>
+                        <a href="#" class="project">
+                            <div class="project__text">
+                                <p class="project__title">Spring for Android</p>
+                                <p class="project__text">Provides key Spring components for use in developing Android applications.</p>
+                            </div>
+                        </a>
+                        <a href="#" class="project">
+                            <div class="project__text">
+                                <p class="project__title">Spring Flex</p>
+                                <p class="project__text">A project to make it easier to build Spring-powered Rich Internet Applications using Adobe Flex as the front-end client.</p>
+                            </div>
+                        </a>
+                        <a href="#" class="project">
+                            <div class="project__text">
+                                <p class="project__title">Spring Integration Groovy DSL</p>
+                                <p class="project__text">A Groovy based DSL for developing Spring Integration applications.</p>
+                            </div>
+                        </a>
+                        <a href="#" class="project">
+                            <div class="project__text">
+                                <p class="project__title">Spring Integration Scala DSL</p>
+                                <p class="project__text">A Scala based DSL for developing Spring Integration applications.</p>
+                            </div>
+                        </a>
+                        <a href="#" class="project">
+                            <div class="project__text">
+                                <p class="project__title">Spring Mobile</p>
+                                <p class="project__text">Simplifies the development of mobile web apps through device detection and progressive rendering options.</p>
+                            </div>
+                        </a>
+                        <a href="#" class="project">
+                            <div class="project__text">
+                                <p class="project__title">Spring Roo</p>
+                                <p class="project__text">Makes it fast and easy to build full Java applications in minutes.</p>
+                            </div>
+                        </a>
+                        <a href="#" class="project">
+                            <div class="project__text">
+                                <p class="project__title">Spring Scala</p>
+                                <p class="project__text">A community run project that provides support for Spring framework development in Scala</p>
+                            </div>
+                        </a>
+                        <a href="#" class="project">
+                            <div class="project__text">
+                                <p class="project__title">Spring Social</p>
+                                <p class="project__text">Easily connects your applications with third-party APIs such as Facebook, Twitter, LinkedIn, and more.</p>
+                            </div>
+                        </a>
+                        <a href="#" class="project">
+                            <div class="project__text">
+                                <p class="project__title">Spring XD</p>
+                                <p class="project__text">Simplifies the development of big data applications by addressing ingestion, analytics, batch jobs and data export.</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
