--- a/html-css-task/index.html
+++ b/html-css-task/index.html
@@ -318,7 +318,92 @@
                     </div>
                 </div>
             </div>
+            <div class="block">
+                <div class="container prefooter">
+                    <div class="circle"></div>
+                    <img src="assets/images/footer-circles-grid.svg" alt="" class="circle__grid">
+                    <div class="prefooter__card">
+                        <h2 class="title">Get ahead</h2>
+                        <p class="text">VMware offers training and certification to turbo-charge your progress.</p>
+                        <a href="" class="prefooter__link">Learn more</a>
+                    </div>
+                    <div class="prefooter__card">
+                        <h2 class="title">Get support</h2>
+                        <p class="text">Spring Runtime offers support and binaries for OpenJDK™, Spring, and Apache Tomcat® in one simple subscription.</p>
+                        <a href="" class="prefooter__link">Learn more</a>
+                    </div>
+                    <div class="prefooter__card">
+                        <h2 class="title">Upcoming events</h2>
+                        <p class="text">Check out all the upcoming events in the Spring community.</p>
+                        <a href="" class="prefooter__link">View all</a>
+                    </div>
+                </div>
+            </div>
         </main>
+        <footer>
+            <div class="container">
+                <ul class="footer__list">
+                    <li class="footer__sublist">
+                        <a href="#" class="first">Why Spring</a>
+                        <a href="#">Microservices</a>
+                        <a href="#">Reactive</a>
+                        <a href="#">Event Driven</a>
+                        <a href="#">Cloud</a>
+                        <a href="#">Web Applications</a>
+                        <a href="#">Serverless</a>
+                        <a href="#">Batch</a>
+                    </li>
+                    <li class="footer__sublist">
+                        <a href="#" class="first">Learn</a>
+                        <a href="#">Quickstart</a>
+                        <a href="#">Guides</a>
+                        <a href="#">Blog</a>
+                    </li>
+                    <li class="footer__sublist">
+                        <a href="#" class="first">Community</a>
+                        <a href="#">Events</a>
+                        <a href="#">Team</a>
+                    </li>
+                    <li class="footer__sublist">
+                        <a href="#" class="first">Projects</a>
+                        <a href="#" class="first">Training</a>
+                        <a href="#" class="first">Support</a>
+                        <a href="#" class="first">Thank You</a>
+                    </li>
+                    <li  class="footer__sublist inputs">
+                        <p class="title">Get the Spring newsletter</p>
+                        <form class="inputs">
+                            <input type="text" class="email" placeholder="Email Address">
+                            <button class="sendbtn">SUBSCRIBE</button>
+                            <div class="check">
+                                <input type="checkbox" class="chekbox">
+                                <p class="text">Yes, I would like to be contacted by The Spring Team and VMware for newsletters, promotions and events</p>
+                            </div>
+                        </form>
+                    </li>
+                </ul>
+                <div class="bottom">
+                    <div class="bottom__title">
+                        <img src="assets/images/logo.svg" alt="" class="logo">
+                        <div class="social__block">
+                            <div class="social">
+                                <svg id="youtube-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40"><circle class="cls-1" cx="20" cy="20" r="20"></circle><path class="cls-2" d="M30.91,14.53a2.89,2.89,0,0,0-2-2C27.12,12,20,12,20,12s-7.12,0-8.9.47a2.9,2.9,0,0,0-2,2A30.56,30.56,0,0,0,8.63,20a30.44,30.44,0,0,0,.46,5.47,2.89,2.89,0,0,0,2,2C12.9,28,20,28,20,28s7.12,0,8.9-.47a2.87,2.87,0,0,0,2-2A30.56,30.56,0,0,0,31.37,20,28.88,28.88,0,0,0,30.91,14.53ZM17.73,23.41V16.59L23.65,20Z"></path></svg>
+                            </div>
+                            <div class="social">
+                                <svg id="github-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 75.93 75.93"><path class="cls-1" d="M38,0a38,38,0,1,0,38,38A38,38,0,0,0,38,0Z"></path><path class="cls-2" d="M38,15.59A22.95,22.95,0,0,0,30.71,60.3c1.15.21,1.57-.5,1.57-1.11s0-2,0-3.9c-6.38,1.39-7.73-3.07-7.73-3.07A6.09,6.09,0,0,0,22,48.86c-2.09-1.42.15-1.39.15-1.39a4.81,4.81,0,0,1,3.52,2.36c2,3.5,5.37,2.49,6.67,1.91a4.87,4.87,0,0,1,1.46-3.07c-5.09-.58-10.45-2.55-10.45-11.34a8.84,8.84,0,0,1,2.36-6.15,8.29,8.29,0,0,1,.23-6.07s1.92-.62,6.3,2.35a21.82,21.82,0,0,1,11.49,0c4.38-3,6.3-2.35,6.3-2.35a8.29,8.29,0,0,1,.23,6.07,8.84,8.84,0,0,1,2.36,6.15c0,8.81-5.37,10.75-10.48,11.32a5.46,5.46,0,0,1,1.56,4.25c0,3.07,0,5.54,0,6.29s.42,1.33,1.58,1.1A22.94,22.94,0,0,0,38,15.59Z"></path></svg>
+                            </div>
+                            <div class="social">
+                                <svg id="twitter-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 75.93 75.93"><circle class="cls-1" cx="37.97" cy="37.97" r="37.97"></circle><path id="Twitter-2" data-name="Twitter" class="cls-2" d="M55.2,22.73a15.43,15.43,0,0,1-4.88,1.91,7.56,7.56,0,0,0-5.61-2.49A7.78,7.78,0,0,0,37,30a7.56,7.56,0,0,0,.2,1.79,21.63,21.63,0,0,1-15.84-8.23,8,8,0,0,0,2.37,10.52,7.66,7.66,0,0,1-3.48-1v.09A7.84,7.84,0,0,0,26.45,41a7.54,7.54,0,0,1-2,.28A7.64,7.64,0,0,1,23,41.09a7.71,7.71,0,0,0,7.18,5.47,15.21,15.21,0,0,1-9.55,3.37,15.78,15.78,0,0,1-1.83-.11,21.41,21.41,0,0,0,11.78,3.54c14.13,0,21.86-12,21.86-22.42,0-.34,0-.68,0-1a15.67,15.67,0,0,0,3.83-4.08,14.9,14.9,0,0,1-4.41,1.24A7.8,7.8,0,0,0,55.2,22.73Z"></path></svg>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bottom__text">
+                        <p class="text">© 2022 VMware, Inc. or its affiliates. Terms of Use • Privacy • Trademark Guidelines • Your California Privacy Rights • Сookie</p>
+                        <p class="text">Apache®, Apache Tomcat®, Apache Kafka®, Apache Cassandra™, and Apache Geode™ are trademarks or registered trademarks of the Apache Software Foundation in the United States and/or other countries. Java™, Java™ SE, Java™ EE, and OpenJDK™ are trademarks of Oracle and/or its affiliates. Kubernetes® is a registered trademark of the Linux Foundation in the United States and other countries. Linux® is the registered trademark of Linus Torvalds in the United States and other countries. Windows® and Microsoft® Azure are registered trademarks of Microsoft Corporation. “AWS” and “Amazon Web Services” are trademarks or registered trademarks of Amazon.com Inc. or its affiliates. All other trademarks and copyrights are property of their respective owners and are only mentioned for informative purposes. Other names may be trademarks of their respective owners.</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>  
 </body>
 </html>
