Added header display from array of objects in JS

--- a/html-css-task/index.html
+++ b/html-css-task/index.html
@@ -12,7 +12,7 @@
             <div class="container">
                 <a href="#"><img class="logo" src="assets/images/logo.svg" alt="logo"></a>
                 <ul class="menu__list">
-                    <li class="menu__items">
+                    <!-- <li class="menu__items">
                         <div class="dropdown-content">
                             <a href="#">Overview</a>
                             <a href="#">Microservices</a>
@@ -70,12 +70,12 @@
                             <a href="#">Overview</a>
                             <a href="#">Events</a>
                             <a href="#">Team</a>
-                          </div>
+                        </div>
                         <div class="dropdown">
                             <span class="dropbtn">Community</span>
                             <div class="nav-arrow"></div>
                         </div>
-                    </li>
+                    </li> -->
                 </ul>
                 <div class="burger">
                     <div class="burger__bar"></div>
@@ -406,5 +406,11 @@
             </div>
         </footer>
     </div>  
+    <script src="index.js"></script>
 </body>
 </html>
+
+
+
+
+
