--- a/html-css-task/index.html
+++ b/html-css-task/index.html
@@ -12,8 +12,9 @@
             <div class="container">
                 <a href="#"><img class="logo" src="assets/images/logo.svg" alt="logo"></a>
                 <ul class="menu__list">
+                    <svg version="1.1" class="x-mark controller" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 14.6 14.6" style="display: inline;" xml:space="preserve"><style type="text/css">.st0{fill:none;stroke:#ffffff;stroke-widdata-th-3;stroke-miterlimit:10;}</style><title>close</title><line class="st0" x1="1.5" y1="1.5" x2="13.1" y2="13.1"></line><line class="st0" x1="13.1" y1="1.5" x2="1.5" y2="13.1"></line></svg>
                 </ul>
-                <div class="burger">
+                <div class="burger controller">
                     <div class="burger__bar"></div>
                     <div class="burger__bar"></div>
                     <div class="burger__bar"></div>
